--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
     "library"
   ],
   "author": "Rogerio Barbosa <rogerio_dfb@hotmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.17.2"
+  }
 }
